# Cadmium-Plant-Growth

./: .gitignore  Basil Plant Report.docx  CMakeLists.txt  DEVSmodelsForm.doc  Makefile  README.md  build_sim.sh
Testing Outputs/: greenhouse_output_stress_refactor.txt  soil_test_outputs.txt
Testing Outputs/Nature/: nature_test_outputs_trail3.txt  nature_test_outputs_trail5.txt  nature_test_outputs_trial1.txt  nature_test_outputs_trial2.txt  nature_test_outputs_trial4.txt
Testing Outputs/Soil/: soil_test_output_race_conditions.txt  soil_test_outputs.txt
Testing Outputs/Stem/: stem_test_outputs_stress_refactor.txt  stem_test_recovery.txt
Testing Outputs/Stem and Soil Coupled/: basil_plant_test_outputs.txt
Testing Outputs/Top Model/: greenhouse_output_nutrient_threshold_10.txt  greenhouse_output_t100.txt  greenhouse_output_t100_trial1.txt  greenhouse_output_t200.txt  greenhouse_output_t200_trial1.txt  greenhouse_output_t200_trial2.txt  greenhouse_output_t200_trial3.txt  greenhouse_output_t300.txt
atomics/: nature.hpp
input_data/: stem_input_response_recovery.txt
inputs/: soil_input_request_concurrent.txt
main/include/: basil_plant.hpp  greenhouse.hpp  main.cpp  soil.hpp  stem.hpp
simulation_results/: greenhouse_logs_t1000.csv
test/: test_basil_plant.cpp  test_nature.cpp  test_soil.cpp  test_stem.cpp
test_outputs_csv/: greenhouse_logs_t500.csv
